src/test/ui/traits/trait-method-private.stderr
error[E0624]: method `method` is private
  --> $DIR/trait-method-private.rs:19:9
   |
LL |     foo.method();
   |         ^^^^^^
   |
   = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope, perhaps add a `use` for it:
   |
LL | use inner::Bar;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0624`.
